--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
         "axios": "^0.21.1",
         "bcrypt": "^5.0.0",
         "bootstrap": "^5.1.3",
+        "bootstrap-icons": "^1.7.2",
         "compression": "^1.7.3",
         "express": "^4.16.4",
         "history": "^4.9.0",
