--- a/package.json
+++ b/package.json
@@ -24,11 +24,13 @@
         "bcrypt": "^5.0.0",
         "bootstrap": "^5.1.3",
         "compression": "^1.7.3",
+        "date-fns": "^2.28.0",
         "express": "^4.16.4",
         "history": "^4.9.0",
         "jsonwebtoken": "^8.5.1",
         "morgan": "^1.9.1",
         "pg": "^8.5.1",
+        "react-date-range": "^1.4.0",
         "sequelize": "^6.3.5"
     },
     "devDependencies": {
@@ -40,12 +42,13 @@
         "babel-loader": "^8.2.2",
         "case-sensitive-paths-webpack-plugin": "^2.4.0",
         "chai": "^4.2.0",
+        "css-loader": "^6.6.0",
         "enzyme": "^3.9.0",
         "enzyme-adapter-react-16": "^1.12.1",
         "esm": "^3.2.25",
         "mocha": "^6.2.3",
         "nodemon": "^1.19.4",
-        "react": "^16.8.6",
+        "react": "^16.14.0",
         "react-dom": "^16.8.6",
         "react-redux": "^7.0.1",
         "react-router-dom": "^5.0.0",
@@ -55,6 +58,7 @@
         "redux-logger": "^3.0.6",
         "redux-mock-store": "^1.5.3",
         "redux-thunk": "^2.3.0",
+        "style-loader": "^3.3.1",
         "supertest": "^4.0.2",
         "webpack": "^5.15.0",
         "webpack-cli": "^4.3.1"
