--- a/package.json
+++ b/package.json
@@ -27,6 +27,8 @@
         "express": "^4.16.4",
         "history": "^4.9.0",
         "jsonwebtoken": "^8.5.1",
+        "moment": "^2.29.2",
+        "moment-timezone": "^0.5.34",
         "morgan": "^1.9.1",
         "pg": "^8.5.1",
         "react-date-range": "^1.4.0",
